# f1_strategy_engine

./: .dockerignore  .env 2.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yaml
.github/: pull_request_template.md
backend/: alembic.ini  pyproject.toml
backend/src/pitwall/: __init__.py
backend/src/pitwall/api/: __init__.py  connections.py  dependencies 2.py  dependencies.py  main.py  schemas.py  ws.py
backend/src/pitwall/api/routes/: backtest.py  causal.py  config.py  degradation.py  replay.py  sessions 2.py  sessions.py
backend/src/pitwall/causal/: __init__.py  comparison.py  dataset_builder.py  estimators.py  explain.py  gaps.py  graph.py  known_undercuts.py  labels.py  live_inference.py
backend/src/pitwall/core/: __init__.py  config.py  logging 2.py  logging.py  topics.py
backend/src/pitwall/db/: __init__.py  engine.py
backend/src/pitwall/db/migrations/: env.py
backend/src/pitwall/db/migrations/versions/: 0001_initial_schema.py  0002_clean_air_lap_times.py  0003_canonical_hungary_slug.py  0004_canonical_hungary_coefficient_sources.py  0005_pit_loss_circuit_fallback.py
backend/src/pitwall/degradation/: __init__.py  dataset 2.py  dataset.py  fit.py  models.py  predictor.py  writer.py
backend/src/pitwall/engine/: __init__.py  backtest.py  calibration.py  demo_mode.py  loop.py  pit_loss.py  projection.py  replay_manager.py  state.py  undercut.py  undercut_diagnostics.py
backend/src/pitwall/feeds/: __init__.py  base.py  openf1.py  replay.py
backend/src/pitwall/ingest/: __init__ 2.py  cli.py  fastf1_client.py  manifest.py  normalize 2.py  normalize.py  writer.py
backend/src/pitwall/ml/: __init__.py  ablation.py  baselines.py  dataset.py  diagnostics.py  model_family.py  plots.py  predictor.py  runtime_diagnostics.py  train.py  tuning.py  undercut_challenger.py
backend/src/pitwall/pace_offsets/: estimation.py  models.py  writer.py
backend/src/pitwall/pit_loss/: __init__.py  estimation.py
backend/src/pitwall/repositories/: __init__.py  degradation.py  events.py  sessions.py  sql.py
backend/tests/contract/: test_openapi_export.py  test_pace_predictor_contract.py
backend/tests/unit/api/: test_backtest_route.py  test_config.py  test_degradation.py  test_dependencies.py  test_health 2.py  test_health.py  test_pit_loss_loading.py  test_replay.py  test_replay_demo_mode.py  test_sessions.py  test_snapshot.py  test_ws.py
backend/tests/unit/causal/: __init__.py  test_comparison.py  test_dataset_builder.py  test_estimators.py  test_gaps.py  test_graph.py  test_known_undercuts.py  test_labels.py  test_live_inference.py  test_predict_cli.py
backend/tests/unit/db/: test_engine.py
backend/tests/unit/degradation/: test_dataset 2.py  test_dataset.py  test_degradation_writer.py  test_fit.py  test_predictor.py
backend/tests/unit/engine/: test_backtest.py  test_data_quality.py  test_demo_mode.py  test_e2e_pipeline.py  test_loop.py  test_pit_loss.py  test_project_pace.py  test_projection.py  test_replay_manager 2.py  test_replay_manager.py  test_state.py  test_undercut.py  test_undercut_diagnostics.py  test_undercut_properties.py
backend/tests/unit/feeds/: test_replay 2.py  test_replay.py
backend/tests/unit/ingest/: test_manifest.py  test_normalize.py  test_writer 2.py
backend/tests/unit/ml/: test_ablation.py  test_baselines.py  test_dataset.py  test_diagnostics.py  test_model_family.py  test_plots.py  test_runtime_diagnostics.py  test_train.py  test_tuning.py  test_undercut_challenger.py  test_xgboost_predictor.py
backend/tests/unit/pace_offsets/: test_estimation.py  test_writer.py
backend/tests/unit/pit_loss/: test_estimation.py
backend/tests/unit/repositories/: test_sql.py
docker/: backend.Dockerfile  frontend.Dockerfile  frontend.nginx.conf  postgres-init.sql
docs/: CAUSAL_MODEL.md  DEMO.md  architecture.md  blog.md  causal_dag.dot  causal_model_performance.md  changelog.md  frontend_dashboard_wireframe.md  gameplan_4people.md  ml_temporal_modeling_plan.md  progress.md  stream-c-phase0-contract-audit.md  stream-c-phase5-live-demo-validation.md  stream-c-phase5c-live-alert-verification.md  walkthrough.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
infra/: README.md  docker-compose-architecture.md  runbook.md
notebooks/: 01_explore_fastf1.md  02_fit_degradation 2.md  02_fit_degradation.md  03_pit_loss_estimation.md  04_driver_team_offsets.md  05_xgb_dataset.md  06_xgb_training.md  07_augmented_temporal_model.md
scripts/: audit_causal_inputs.py  audit_undercut_labels.py  build_causal_dataset.py  build_xgb_dataset.py  compare_causal_engines.py  compare_predictors.py  derive_known_undercuts.py  diagnose_projection_error.py  diagnose_undercut_scores.py  diagnose_xgb_dataset_shift.py  diagnose_xgb_runtime_features.py  evaluate_undercut_challengers.py  evaluate_xgb_baselines.py  export_openapi.py  fit_degradation 2.py  fit_degradation.py  fit_driver_offsets.py  fit_pit_loss.py  import_curated_known_undercuts.py  ingest_race_manifest.py  ingest_season.py  plot_xgb_diagnostics.py  predict_causal_undercut.py  prepare_causal_extended_data.py  reconstruct_race_gaps.py  run_causal_dowhy.py  run_xgb_ablation.py  sweep_undercut_thresholds.py  train_xgb.py  tune_xgb.py  validate_degradation 2.py  validate_degradation.py  validate_demo_ingest.py  validate_driver_offsets.py  (+6 more)
(+90 files in other folders)
