[project]
name = "pitwall"
version = "0.1.0"
description = "Real-time F1 undercut detection engine"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PitWall Team" }]

# Stream A, Day 2: FastF1 ingestion writes normalized local parquet outputs.
# Keep additions additive; do not reorganise this skeleton without coordinating
# with Stream D.
dependencies = [
    "fastf1==3.8.3",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.99",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pitwall"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"
