[project]
name = "pitwall"
version = "0.1.0"
description = "Real-time F1 undercut detection engine"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PitWall Team" }]

# Dependencies are layered by stream:
#   Stream A, Day 1: nothing (PacePredictor uses only the stdlib).
#   Stream B, Day 2: HTTP surface + feed abstractions (the block below).
#   Stream D, Day 1: will append the rest of the backend stack
#                    (SQLModel, Alembic, psycopg, Polars, scipy, xgboost,
#                    FastF1) without reorganising this list.
# Keep additions additive.
dependencies = [
    # Stream B, Day 2 — backend HTTP surface, feed abstractions, config & logging
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.1.0",
# Stream A, Day 3: FastF1 ingestion writes normalized local parquet outputs
# and idempotent rows into local TimescaleDB/Postgres.
# Keep additions additive; do not reorganise this skeleton without coordinating
# with Stream D.
dependencies = [
    "alembic>=1.13",
    "fastf1==3.8.3",
    "numpy>=1.26",
    "polars>=1.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.99",
    "ruff>=0.5",
    "mypy>=1.8",
    # Test client for FastAPI + tooling for the OpenAPI contract test
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "openapi-spec-validator>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pitwall"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"
