[project]
name = "pitwall"
version = "0.1.0"
description = "Real-time F1 undercut detection engine"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PitWall Team" }]

# Dependencies are layered by stream and added additively.
# Stream B Day 2: HTTP surface, feed abstractions, config & logging.
# Stream A Day 2-3: FastF1 ingestion, DB access, data processing.
# Stream D Day 1: merged duplicate TOML blocks (bug fix); added xgboost.
dependencies = [
    # Stream B, Day 2 — backend HTTP surface
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.1.0",
    # Stream A, Day 2-3 — FastF1 ingestion, DB access, data processing
    "alembic>=1.13",
    "fastf1==3.8.3",
    "numpy>=1.26",
    "polars>=1.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
    # Stream D, Day 1 — ML predictor runtime
    "xgboost>=2.0",
    # Stream B causal — graph-based causal effect estimation
    "dowhy>=0.12,<0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.99",
    "ruff>=0.5",
    "mypy>=1.8",
    # Test client for FastAPI + tooling for the OpenAPI contract test
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "types-PyYAML>=6.0",
    "openapi-spec-validator>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",    # FastAPI Depends() in default arg — standard FastAPI pattern
    "RUF002",  # Ambiguous unicode in docstring — cosmetic, not a bug
]

[tool.ruff.lint.isort]
known-first-party = ["pitwall"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"
